Updating lotsa stuff, homepage, fixing bugs, spacing, language

--- a/scss/_base/_base.scss
+++ b/scss/_base/_base.scss
@@ -115,6 +115,10 @@ th {
   }
 }
 
+th {
+  font-size: 14px;
+}
+
 td {
   border: 1px solid #f5f5f5;
   border-left: 0;
