--- a/scss/_utility.scss
+++ b/scss/_utility.scss
@@ -115,6 +115,13 @@
       border-left: 0;
       border-right: 0;
 
+      &:first-child {
+        
+        td {
+          border-top: none;
+        }
+      }
+
       &.font-scale-altered { /* stylelint-disable-line */
 
         td:nth-child(2) { /* stylelint-disable-line */
@@ -154,6 +161,10 @@
 
       a { /* stylelint-disable-line */
         text-decoration: none;
+
+        &:hover {
+          text-decoration: underline;
+        }
       }
     }
   }
@@ -224,6 +235,7 @@
 
 .multi-column--min-150-wide {
   grid-template-columns: 1fr;
+  width: 100%;
   @include breakpoint(lima) {
     grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
   }
@@ -231,6 +243,7 @@
 
 .multi-column--min-200-wide {
   grid-template-columns: 1fr;
+  width: 100%;
   @include breakpoint(lima) {
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
   }
@@ -238,6 +251,7 @@
 
 .multi-column--min-300-wide {
   grid-template-columns: 1fr;
+  width: 100%;
   @include breakpoint(lima) {
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   }
@@ -245,6 +259,7 @@
 
 .multi-column--min-400-wide {
   grid-template-columns: 1fr;
+  width: 100%;
   @include breakpoint(lima) {
     grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
   }
@@ -252,6 +267,7 @@
 
 .multi-column--min-500-wide {
   grid-template-columns: 1fr;
+  width: 100%;
   @include breakpoint(lima) {
     grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
   }
@@ -259,6 +275,7 @@
 
 .multi-column--min-600-wide {
   grid-template-columns: 1fr;
+  width: 100%;
   @include breakpoint(lima) {
     grid-template-columns: repeat(auto-fit, minmax(600px, 1fr));
   }
@@ -441,7 +458,7 @@ hr {
   }
 
   > * {
-    justify-self: center;
+    // justify-self: center;
   }
 }
 
@@ -952,7 +969,7 @@ hr {
     }
 
     h4 {
-      margin: 8px 0 16px;
+      margin: 16px 0;
     }
 
     p {
